# slacktasticpy

./: .editorconfig  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: pr.yml
docs/diagrams/: slacktasticpy.excalidraw
slacktasticpy/: __init__.py
tests/: __init__.py
